--- a/DataConveyer/DataConveyer.csproj
+++ b/DataConveyer/DataConveyer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-    <!-- Version related attributes are handles by Nerdbank.GitVersioning (version.json) -->
+    <!-- Version related attributes are handled by Nerdbank.GitVersioning (version.json) -->
     <Description>Data Conveyer is a lightweight transformation engine to facilitate real-time data migrations.</Description>
     <!-- For some reason © symbol gets corrupted if placed in Directory.Build.props -->
     <Copyright>Copyright © 2016-2019 Mavidian Technologies Limited Liability Company. All Rights Reserved.</Copyright>
@@ -43,17 +43,17 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>2.2.0</Version>
+      <Version>3.1.3</Version>
     </PackageReference>
-    <PackageReference Include="Nerdbank.GitVersioning" Version="2.3.138">
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.2.31">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.2</Version>
+      <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="NuGet.CommandLine">
-      <Version>4.9.4</Version>
+      <Version>5.7.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -94,7 +94,7 @@
       <Version>4.3.4</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Primitives">
-      <Version>4.3.0</Version>
+      <Version>4.3.1</Version>
     </PackageReference>
     <PackageReference Include="System.ObjectModel">
       <Version>4.3.0</Version>
@@ -130,7 +130,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Text.RegularExpressions">
-      <Version>4.3.0</Version>
+      <Version>4.3.1</Version>
     </PackageReference>
     <PackageReference Include="System.Threading">
       <Version>4.3.0</Version>
@@ -139,7 +139,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Dataflow">
-      <Version>4.9.0</Version>
+      <Version>4.11.1</Version>
     </PackageReference>
     <PackageReference Include="System.Xml.ReaderWriter">
       <Version>4.3.1</Version>
