--- a/DataConveyer/DataConveyer.csproj
+++ b/DataConveyer/DataConveyer.csproj
@@ -9,6 +9,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageIconUrl>http://www.mavidian.com/files/MavLogo_15_64_64_t.png</PackageIconUrl>
+    <PackageIcon>icon\MavLogo_17_128_128.png</PackageIcon>
     <PackageReleaseNotes>Asynchronous intake and output for X12, XML and JSON data kinds.</PackageReleaseNotes>
     <PackageTags>data parser scrubber transformer router formatter etl migration dataflow</PackageTags>
     <PackageProjectUrl>http://www.dataconveyer.com</PackageProjectUrl>
@@ -40,6 +41,10 @@
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="images\MavLogo_17_128_128.png" Pack="true" Visible="false" PackagePath="icon"/>
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.Platforms">
